[tool.poetry]
name = "conflict"
version = "0.1.0"
description = "The automatic Bilibili watcher."
license = "GPL-3.0-only"
authors = [
    "AsakuraMizu <0xWATERx0@gmail.com>",
    "ZeroAurora <zeroaurora233@outlook.com>"
]

readme = "README.md"

homepage = "https://github.com/CytoidCommunity/conflict"
repository = "https://github.com/CytoidCommunity/conflict"

keywords = ["live", "bilibili"]

classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet"
]

packages = [
    { include = "conflict" }
]


[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.5.0"
appdirs = "^1.4.3"
cleo = "^0.8.1"
httpx = "^0.12.1"
tomlkit = "^0.6.0"
aioboto3 = {version = "^8.0.2", optional = true}
aiomirai = {version = "0.3.5", optional = true}
python-telegram-bot = {version = "^12.6.1", optional = true}
ffmpeg-python = {version = "^0.2.0", optional = true}

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
yapf = "^0.30.0"

[tool.poetry.extras]
ffmpeg = ["ffmpeg-python"]
mirai = ["aiomirai"]
s3 = ["aioboto3"]
telegram = ["python-telegram-bot"]

[tool.poetry.scripts]
conflict = "conflict.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
