[tool.poetry]
name = "conflict"
version = "0.1.0"
description = "The automatic Bilibili watcher."
license = "GPL-3.0-only"
authors = [
    "AsakuraMizu <0xWATERx0@gmail.com>",
    "ZeroAurora <zeroaurora233@outlook.com>"
]

readme = "README.md"

homepage = "https://github.com/CytoidCommunity/conflict"
repository = "https://github.com/CytoidCommunity/conflict"

keywords = ["live", "bilibili"]

classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet"
]

packages = [
    { include = "conflict" }
]


[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.5.0"
appdirs = "^1.4.4"
cleo = "^0.8.1"
httpx = "^0.13.3"
tomlkit = "^0.6.0"
aiomirai = {version = "^0.3.7", optional = true}

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
ipython = "^7.15.0"

[tool.poetry.extras]
mirai = ["aiomirai"]

[tool.poetry.scripts]
conflict = "conflict.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
