[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "conflict"
author = "CytoidCommunity"
author-email = "community@cytoid.io"
home-page = "https://github.com/CytoidCommunity/conflict"
description-file = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet"
]
requires-python = ">=3.8"
keywords = "live bilibili"

requires = [
    "aiofiles ~= 0.5",
    "aiohttp ~= 3.6",
    "appdirs ~= 1.4",
    "pydantic ~= 1.5",
    "tenacity ~= 6.2",
    "toml ~= 0.10",
    "typer ~= 0.3"
]

[tool.flit.metadata.requires-extra]
dev = ["mypy", "pylint"]

test = ["pytest"]

ffmpeg = ["ffmpeg-python ~= 0.2"]

s3 = ["aioboto3 ~= 8.0"]

# Push
cqhttp = ["aiocqhttp ~= 1.3"]
mastodon = ["atoot ~= 1.0"]
mirai = ["aiomirai ~= 0.3"]
telegram = ["aiogram ~= 2.9"]

[tool.flit.scripts]
conflict = "conflict.console:app"
